<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/background"
    android:paddingTop="4dp"
    android:paddingLeft="4dp"
    >

    <TextView
        android:id="@+id/edit_group_name_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:text="@string/groupName"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_group_current_name"
        app:layout_constraintEnd_toStartOf="@+id/edit_group_current_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_group_current_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PlaceHolder"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/edit_group_edit_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:src="@drawable/edit_button_icon"
        app:layout_constraintStart_toEndOf="@+id/edit_group_current_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/edit_group_current_name"
        android:layout_marginStart="4dp"
        />


    <!-- End of group name field -->
    <View
        android:id="@+id/edit_group_divider1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/edit_group_edit_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_group_current_name"

        />

    <TextView
        android:id="@+id/edit_group_description_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/groupDescription"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_group_divider1"


        />

    <EditText
        android:id="@+id/edit_group_edit_description_text"
        android:layout_width="207dp"
        android:layout_height="88dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/btnColor"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/descriptionToolTip"
        android:inputType="textMultiLine"
        android:textColor="@color/btnColor"
        android:textColorHint="@color/btnColor"
        app:layout_constraintStart_toEndOf="@id/edit_group_description_marker"
        app:layout_constraintTop_toBottomOf="@+id/edit_group_divider1"

        />


    <ImageButton
        android:id="@+id/edit_group_edit_description_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:src="@drawable/edit_button_icon"
        app:layout_constraintStart_toEndOf="@+id/edit_group_edit_description_text"
        app:layout_constraintBottom_toBottomOf="@+id/edit_group_edit_description_text"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="4dp"
        />

    <!-- End of description field-->
    <View
        android:id="@+id/edit_group_divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_group_edit_description_text" />





    <Button
        android:id="@+id/edit_group_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_background"
        android:text="@string/saveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/edit_group_textViewMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_group_divider2"
        android:text="@string/members"/>

    <Spinner
        android:id="@+id/spinnerMembers"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="264dp"
        app:layout_constraintStart_toEndOf="@id/edit_group_textViewMembers"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_group_divider2"
        android:backgroundTint="@color/btnColor"
        >

    </Spinner>


</androidx.constraintlayout.widget.ConstraintLayout>