<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.CreateChoreActivity"
    android:padding="30dp"

    >

    <TextView
        android:id="@+id/activity_register_textField_nameChore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameChore"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/activity_register_editText_nameChore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_register_textField_nameChore"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="10dp"
        />

    <View
        android:id="@+id/create_chore_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/activity_register_editText_nameChore"
        app:layout_constraintBottom_toTopOf="@+id/activity_register_textField_descriptionChore"
        />

    <TextView
        android:id="@+id/activity_register_textField_descriptionChore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/btnColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/descriptionChore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_chore_divider1"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/activity_register_editText_descriptionChore"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/activity_register_textField_descriptionChore"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="10dp"
        />

    <View
        android:id="@+id/create_chore_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/activity_register_editText_descriptionChore"
        app:layout_constraintBottom_toTopOf="@+id/activity_register_textField_setPointsChore"
        />

    <TextView
        android:id="@+id/activity_register_textField_setPointsChore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/btnColor"
        android:text="@string/setPointsChore"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_chore_divider2"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/activity_register_editText_setPointsChore"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/activity_register_textField_setPointsChore"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>